{
  "version": 4,
  "terraform_version": "1.0.5",
  "serial": 29,
  "lineage": "f948ee66-d285-32db-5bf2-043cefc70514",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2021-08-27T05:03:10.276-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/terraform-gcppoc/global/firewalls/allow-http",
            "log_config": [],
            "name": "allow-http",
            "network": "https://www.googleapis.com/compute/v1/projects/terraform-gcppoc/global/networks/default",
            "priority": 1000,
            "project": "terraform-gcppoc",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-gcppoc/global/firewalls/allow-http",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "allow-http"
            ],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2021-08-27T05:03:10.308-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/terraform-gcppoc/global/firewalls/allow-https",
            "log_config": [],
            "name": "allow-https",
            "network": "https://www.googleapis.com/compute/v1/projects/terraform-gcppoc/global/networks/default",
            "priority": 1000,
            "project": "terraform-gcppoc",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-gcppoc/global/firewalls/allow-https",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "allow-https"
            ],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/rhel-cloud/global/images/rhel-7-v20210817",
                    "size": 20,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/terraform-gcppoc/zones/europe-west1-b/disks/list-name1-name2-name3"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "description": "This is our Virtual Machine",
            "enable_display": false,
            "id": "projects/terraform-gcppoc/zones/europe-west1-b/instances/list-name1-name2-name3",
            "instance_id": "2666978779095984784",
            "label_fingerprint": "8ZKEOOQ7eHI=",
            "labels": {
              "machine_type": "n1-standard-1",
              "name": "list-1"
            },
            "machine_type": "n1-standard-1",
            "metadata": {
              "foo": "bar",
              "size": "20"
            },
            "metadata_fingerprint": "ivLsRhDf9ns=",
            "metadata_startup_script": "echo hi \u003e /test.txt",
            "name": "list-name1-name2-name3",
            "network_interface": [
              {
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/terraform-gcppoc/global/networks/default",
                "network_ip": "10.132.0.2",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/terraform-gcppoc/regions/europe-west1/subnetworks/default",
                "subnetwork_project": "terraform-gcppoc"
              }
            ],
            "project": "terraform-gcppoc",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-gcppoc/zones/europe-west1-b/instances/list-name1-name2-name3",
            "service_account": [
              {
                "email": "295213669480-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/compute.readonly",
                  "https://www.googleapis.com/auth/devstorage.read_only",
                  "https://www.googleapis.com/auth/userinfo.email"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "allow-http",
              "allow-https"
            ],
            "tags_fingerprint": "0lKznsNvMu8=",
            "zone": "europe-west1-b"
          }
        }
      ]
    }
  ]
}